--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starter",
-  "version": "0.1.0",
+  "name": "scheduler-mhp-sudtp-agile-festival",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
