--- a/ui/package.json
+++ b/ui/package.json
@@ -11,13 +11,16 @@
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "core-js": "^2.6.5",
+    "leaflet": "^1.5.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vue2-leaflet": "^2.1.1",
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.4.6",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
